# guile-zstd

./: .dir-locals.el  .gitignore  .guix-authorizations  ChangeLog  Makefile.am  README  build.sh  configure.ac  guix.scm  zstd.scm
tests/: zstd.scm
zstd/: config.scm.in
